exports[`test responds to click events correctly 1`] = `
<div
  className="order"
  onClick={[Function bound expand]}
  style={
    Object {
      "border": "1px solid black",
      "borderRadius": 10,
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "arial",
      "height": 50,
      "margin": "2%",
      "padding": 20,
      "textAlign": "center",
      "width": "40%"
    }
  }>
  <div>
    Order For - 
    Adham Bard
  </div>
  <div>
    Payment Status: 
    Paid 3748 EUR
  </div>
  <button>
    Click to Expand
  </button>
</div>
`;

exports[`test responds to click events correctly 2`] = `
<div
  className="order"
  onClick={[Function bound expand]}
  style={
    Object {
      "border": "1px solid black",
      "borderRadius": 10,
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "arial",
      "height": 50,
      "margin": "2%",
      "padding": 20,
      "textAlign": "center",
      "width": "40%"
    }
  }>
  <div>
    Order For - 
    Adham Bard
  </div>
  <div>
    Payment Status: 
    Paid 3748 EUR
  </div>
  <div>
    <div
      className="modale-background"
      style={
        Object {
          "backgroundColor": "grey",
          "fontFamily": "arial",
          "height": "100%",
          "left": 0,
          "opacity": 0.5,
          "position": "fixed",
          "top": 0,
          "width": "100%"
        }
      } />
    <div
      className="detail-modal"
      style={
        Object {
          "background": "white",
          "border": "2px solid black",
          "height": 200,
          "left": "50%",
          "margin": "-100px 0 0 -200px",
          "padding": 30,
          "position": "fixed",
          "textAlign": "left",
          "top": "50%",
          "width": 400,
          "zIndex": 10
        }
      }>
      <div
        className="close"
        style={
          Object {
            "height": 40,
            "paddingTop": 10,
            "position": "absolute",
            "right": 0,
            "textAlign": "center",
            "top": 0,
            "width": 40
          }
        }>
        X
      </div>
      <div>
        Updated At: 
        2015-10-26 15:35:09
      </div>
      <div>
        Customer Email: 
        1444656004@example.com
      </div>
      <div>
        Order ID: 
        1
      </div>
      <div>
        Postcode: 
        80801
      </div>
      <div>
        Weight: 
        3
      </div>
    </div>
  </div>
</div>
`;
